crates/ignis_analyzer/tests/snapshots/golden_ok__arithmetic_u8_plus_u32_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): u32
  body:
    Block : never
      statements:
        Let(a) : void
          init:
            Literal(Int32(10)) : u8
        Let(b) : void
          init:
            Literal(Int32(20)) : u32
        Let(c) : void
          init:
            Binary(Add) : u32
              left:
                Variable(a) : u8
              right:
                Variable(b) : u32
        Return : never
          Variable(c) : u32

--- Variable Initializers ---

a: u8 = Literal(Int32(10))
b: u32 = Literal(Int32(20))
c: u32 = Binary(Add, Variable(a), Variable(b))
