crates/ignis_analyzer/tests/snapshots/golden_ok__compare_u8_with_literal_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(ch) : void
          init:
            Literal(Int32(40)) : u8
        If : void
          cond:
            Binary(Equal) : bool
              left:
                Variable(ch) : u8
              right:
                Literal(Int32(40)) : u8
          then:
            Block : never
              statements:
                Return : never
        Return : never

--- Variable Initializers ---

ch: u8 = Literal(Int32(40))
