crates/ignis_analyzer/tests/snapshots/golden_ok__const_array_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn get_second(): i32
  body:
    Block : never
      statements:
        Return : never
          Index : i32
            base:
              Variable(PRIMES [const]) : i32[4]
            index:
              Literal(Int32(1)) : i32

--- Variable Initializers ---
