crates/ignis_analyzer/tests/snapshots/golden_ok__enum_unit_variants_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): enum Color
  body:
    Block : never
      statements:
        Return : never
          EnumVariant(Color::0) : enum Color
