crates/ignis_analyzer/tests/snapshots/golden_ok__enum_with_payload_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): enum Option
  body:
    Block : never
      statements:
        Return : never
          EnumVariant(Option::0) : enum Option
            [0]:
              Literal(Int32(42)) : i32
