crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_basic_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn double(value: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Mul) : i32
            left:
              Variable(value [param]) : i32
            right:
              Literal(Int32(2)) : i32

fn main(): i32
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(21)) : i32
        Return : never
          Call(double) : i32
            args:
              [0]:
                Variable(x) : i32

--- Variable Initializers ---

x: i32 = Literal(Int32(21))
