crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_f64_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn halved(value: f64): f64
  body:
    Block : never
      statements:
        Return : never
          Binary(Div) : f64
            left:
              Variable(value [param]) : f64
            right:
              Literal(Float64(2.0)) : f64

fn main(): void
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Float64(10.0)) : f64
        Let(h) : void
          init:
            Call(halved) : f64
              args:
                [0]:
                  Variable(x) : f64
        Return : never

--- Variable Initializers ---

h: f64 = Call(halved) { Variable(x) }
x: f64 = Literal(Float64(10.0))
