crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_multiple_for_same_type_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'd'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:211-236
[WARN] A0122: unused variable 'p'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:241-273
