crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_multiple_for_same_type_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn doubled(value: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Mul) : i32
            left:
              Variable(value [param]) : i32
            right:
              Literal(Int32(2)) : i32

fn isPositive(value: i32): bool
  body:
    Block : never
      statements:
        Return : never
          Binary(GreaterThan) : bool
            left:
              Variable(value [param]) : i32
            right:
              Literal(Int32(0)) : i32

fn main(): void
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(21)) : i32
        Let(d) : void
          init:
            Call(doubled) : i32
              args:
                [0]:
                  Variable(x) : i32
        Let(p) : void
          init:
            Call(isPositive) : bool
              args:
                [0]:
                  Variable(x) : i32
        Return : never

--- Variable Initializers ---

d: i32 = Call(doubled) { Variable(x) }
p: bool = Call(isPositive) { Variable(x) }
x: i32 = Literal(Int32(21))
